Creacion del main antunez

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Prata&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Prata&display=swap"rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -32,119 +35,88 @@
         </nav>
     </header>
     <main class="main-index">
-        <div class="div1">
-            <div class="titulo">
-                <h1>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span>Commodi officia labore</span>
-                    nostrum atque beatae
-                    explicabo facilis sint <span>quibusdam</span> dignissimos laboriosam nesciunt <span>aliquid
-                        tempora</span> nemo reiciendis eius,
-                    veritatis <span>eaque inventore excepturi.</span>
-                </h1>
+        <div class="main-img">
+            <img src="./img/img-main-antunez.jpg" alt="propiedad-antunez">
+        </div>
+        <div class="logo-antunez">
+            <img src="./img/antunez-logo.jpeg" alt="logo-antunez" data-aos="fade-right"
+            data-aos-offset="300" 
+            data-aos-easing="ease-in-sine" data-aos-duration="1000">
+        </div>
+        <div class="main-depto">
+            <div class="presentacion">
+                <h1>Antunez</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa itaque fugit quas ipsum! Optio,
+                    deleniti odit deserunt adipisci natus omnis ipsa numquam labore commodi quibusdam laborum, dicta non
+                    totam porro?</p>
             </div>
-            <div class="botones">
-                <button class="button-24" role="button">Button 27</button>
-                <button class="button-23" role="button">Button 23</button>
+            <div class="depto">
+                <img src="./img/depto-antunez.jpeg" alt="departamento-en-alquiler">
+            </div>
+            <div class="position-absoluted">
+                <img src="./img/depto-antunez-2.jpeg" alt="departamento-en-alquiler" data-aos="fade-right"
+                data-aos-offset="300" 
+                data-aos-easing="ease-in-sine" data-aos-duration="2000" >
             </div>
         </div>
-        <div class="descripciones">
-            <div class="textos">
-                <div class="texto1">
-                    <h2>
-                        The future begins with customer
-                    </h2>
-                </div>
-                <div class="texto2">
-                    <h2>
-                        New standars require a new experience
-                    </h2>
-                </div>
+        <div class="main-galeria">
+            <div class="texto">
+                <h2>
+                    Propiedades
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit voluptate autem et aliquid cum quibusdam.
+                </p>
             </div>
-            <div class="cuadros">
-                <div class="cuadro1">
-                    <h2>
-                        <span>333</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </h2>
-                </div>
-                <div class="cuadro2">
-                    <h2>
-                        <span>+77%</span>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                    </h2>
-                </div>
-                <div class="cuadro3">
-                    <h2>
-                        <span>10+</span>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                    </h2>
-                </div>
+            <div class="galeria">
+                <img src="./img/propiedades-antunez (1).jpeg" alt="propiedades-antunez" >
+                <img src="./img/propiedades-antunez (2).jpeg" alt="propiedades-antunez">
+                <img src="./img/propiedades-antunez (3).jpeg" alt="propiedades-antunez">
+                <img src="./img/propiedades-antunez (4).jpeg" alt="propiedades-antunez">
             </div>
         </div>
-        <div class="experiencia1">
-            <div class="uno">
-                <h3>
-                    .01
-                </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores similique sint
-                </p>
-            </div>
-            <div class="dos">
-                <h3>
-                    .02
-                </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores similique sint
-                </p>
-            </div>
-        </div>
-        <div class="experiencia2">
-            <div class="tres">
-                <h3>
-                    .03
-                </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores similique sint
-                </p>
-            </div>
-            <div class="cuatro">
-                <h3>
-                    .04
-                </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores similique sint
-                </p>
-            </div>
-            <div class="cinco">
-                <h3>
-                    .05
-                </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores similique sint
-                </p>
-            </div>
-        </div>
-        <div class="seccion3">
-            <div class="fondo">
-                <div class="caja1">
-                    <h3>
-                        Our growth,
-                        briefly explained
-                    </h3>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, modi! Porro, quaerat distinctio.
-                        Optio dolorum recusandae sequi. Quibusdam consequatur laudantium et reiciendis odio, magni quos
-                        fugit animi voluptatum, a consequuntur.
-                    </p>
-                </div>
-            </div>
-        </div>
-
     </main>
     <footer>
-
-    </footer>
+        <div class="footer">
+            <div class="img-footer">
+                <img src="./img/footer-img.jpg" alt="patio-propiedad-antunez">
+            </div>
+            <div class="formulario">
+                <section class="container">
+                    <div class="row">
+                    <h3 class="center-align">CONTACTO</h3>
+                        <article class="col s6 offset-s3">
+                            <form method="POST" action="formulario-contacto.php">
+                                <div class="input-field">
+                                    <i class="material-icons prefix"></i>
+                                    <label for="nombre">Nombre</label>
+                                    <input type="text" name="nombre" required>
+                                </div>
+            
+                                <div class="input-field">
+                                    <i class="material-icons prefix"></i>
+                                    <label for="apellido">Apellido</label>
+                                    <input type="text" name="apellido" required>
+                                </div>
+                                
+                                <div class="input-field">
+                                    <i class="material-icons prefix"></i>
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" required>
+                                </div>
+                                <p class="center-align">
+                                    <button class="waves-effect waves-light btn" type="submit"><i class="material-icons right"></i>enviar</button>
+                                </p>
+                            </form>
+                        </article>
+                    </div>
+                </section>
+            </footer>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script>
+                    AOS.init();
+                </script>
 </body>
-
 </html>
